alteração do projeto

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <nav>
+    <ul>
+      <li><a routerLink="/tela-login" routerLinkActive="active" ariaCurrentWhenActive="page">Tela</a></li>
+    </ul>
+  </nav>
+  <router-outlet></router-outlet>
+  
 </body>
 </html>
