--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a routerLink="/tela-login" routerLinkActive="active" ariaCurrentWhenActive="page">Tela</a></li>
-    </ul>
-  </nav>
-  <router-outlet></router-outlet>
-  
+  <app-root></app-root> 
 </body>
 </html>
